--- a/styles/ProductList.module.css
+++ b/styles/ProductList.module.css
@@ -1,6 +1,6 @@
 .main-container {
 
-	margin-top: 4em;
+	margin-top: 2em;
 }
 
 .ProductList {
@@ -9,7 +9,7 @@
     overflow-x: auto;
 	gap: 26px;
 	place-content: initial;
-	margin: 0 0 0 1em;
+	margin: 0 0 0 .5em;
 }
 
 .ProductItemHero {
